@@ -181,6 +181,22 @@ name|modeler
 operator|.
 name|action
 operator|.
+name|DbEntityCounterpartAction
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|cayenne
+operator|.
+name|modeler
+operator|.
+name|action
+operator|.
 name|RemoveAttributeAction
 import|;
 end_import
@@ -547,6 +563,11 @@ name|attr
 argument_list|)
 expr_stmt|;
 block|}
+name|focusObjEntity
+argument_list|(
+name|objEntity
+argument_list|)
+expr_stmt|;
 block|}
 if|if
 condition|(
@@ -602,6 +623,29 @@ argument_list|)
 expr_stmt|;
 block|}
 block|}
+block|}
+specifier|private
+name|void
+name|focusObjEntity
+parameter_list|(
+name|ObjEntity
+name|objEntity
+parameter_list|)
+block|{
+name|actionManager
+operator|.
+name|getAction
+argument_list|(
+name|DbEntityCounterpartAction
+operator|.
+name|class
+argument_list|)
+operator|.
+name|viewCounterpartEntity
+argument_list|(
+name|objEntity
+argument_list|)
+expr_stmt|;
 block|}
 annotation|@
 name|Override
